# realtime-LLM-translated-chat

./: .gitignore  Dockerfile  README.md  real-time-llm-translated-chat-architecture-plan.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth_google.py  dependencies.py  events.py  ws.py
backend/app/auth/: google_oauth.py  passwords.py  session_service.py
backend/app/cache/: translation_cache.py
backend/app/observability/: metrics.py
backend/app/orchestration/: __init__.py  message_orchestrator.py
backend/app/persistence/: database.py  models.py
backend/app/persistence/repositories/: messages.py  users.py
backend/app/realtime/: __init__.py  connection_manager.py
backend/app/translation/: __init__.py  errors.py  ports.py  router.py  service.py
backend/app/translation/adapters/: anthropic.py  groq.py  mock.py  openai.py
backend/talk_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_auth_and_ws.py  test_groq_adapter.py  test_mock_adapter.py  test_router.py  test_session_service.py  test_streaming_and_persistence.py  test_translation_contracts.py  test_translation_service.py
go-app/: go.mod  go.sum
go-app/cmd/server/: main.go
go-app/docs/: dependency-decisions.md  migration.md
go-app/internal/app/: bootstrap.go
go-app/scripts/: compare_http_parity.py  compare_ws_parity.py  run-parity.sh  smoke-go-app.sh  verify_shared_compat.py
web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  env.d.ts  main.tsx
(+50 files in other folders)
